--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DB_URL="mongodb://127.0.0.1:27017/ecommerce"
 PORT="4000"
 JWT_SECRET="SECRET"
 UPLOAD_URL="http://localhost:4000/uploads"
+OTP_EMAIL="nithinsabus@gmail.com"
+OTP_PASSWORD="kver gptt tamg ctjy"
